Fixing picks on mobile

--- a/src/styles/_night.scss
+++ b/src/styles/_night.scss
@@ -43,7 +43,6 @@
 }
 
 .movie {
-  min-height: 250px;
   padding: 30px;
   position: relative;
   flex-shrink: 1;
